Weigl jdk10