@@ -1,3 +1,8 @@
+plugins {
+//    id 'io.franzbecker.gradle-lombok' version '1.14' apply false
+    id "com.github.ben-manes.versions" version "0.17.0"
+}
+
 allprojects {
     apply plugin: 'maven'
     group = 'edu.kit.iti.formal.psdbg'
@@ -5,6 +10,7 @@ allprojects {
 }
 
 subprojects {
+  //  apply plugin: 'io.franzbecker.gradle-lombok'
     apply plugin: 'java'
     apply plugin: 'idea'
 
@@ -24,14 +30,36 @@ subprojects {
 
     dependencies {
         compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-        compile group: 'com.google.guava', name: 'guava', version: '22.0'
-        compile group: 'commons-io', name: 'commons-io', version: '2.5'
+        compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
+        compile group: 'commons-io', name: 'commons-io', version: '2.6'
         compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
         testCompile group: 'junit', name: 'junit', version: '4.12'
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+        //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+        compileOnly files("$rootDir/lombok-edge.jar")
     }
 
+    /*lombok { // optional: values below are the defaults
+        //version = "1.16.21" //bleeding edge
+        //sha256 = "c5178b18caaa1a15e17b99ba5e4023d2de2ebc18b58cde0f5a04ca4b31c10e6d"
+    }*/
 
+    compileJava {
+        /*  options.compilerArgs.addAll([
+                  "-Xlint:all,-processing,-cast,-serial,-try",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+          ])*/
+    }
 }
